--- a/EventBooking/Views/Venue/Index.cshtml
+++ b/EventBooking/Views/Venue/Index.cshtml
@@ -16,7 +16,7 @@
         </a>
     </div>
 
-    <div class="card shadow-sm border-0 animate-slide-up" style="animation-delay: 0.2s">
+    <div class="card shadow-sm border-0 animate-slide-up reveal hover-tilt" style="animation-delay: 0.2s">
         <div class="table-responsive">
             <table class="table table-hover mb-0 align-middle border-0">
                 <thead>
