--- a/EventBooking/Views/Events/Delete.cshtml
+++ b/EventBooking/Views/Events/Delete.cshtml
@@ -6,8 +6,8 @@
 
 <div class="container py-5">
     <div class="row justify-content-center">
-        <div class="col-lg-5 col-md-7">
-            <div class="card shadow-lg border-0 animate-slide-up bg-white">
+        <div class="col-lg-5 col-md-7 reveal">
+            <div class="card shadow-lg border-0 animate-slide-up bg-white hover-tilt">
                 <div class="card-body p-4 p-md-5 text-center">
                     <div class="bg-soft-danger d-inline-block p-4 rounded-circle mb-4">
                         <i class="fas fa-exclamation-triangle text-danger fa-3x"></i>
